# sea-raft-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: parity.py
sea_raft_mlx/: __init__.py  convert.py  model.py  ops.py
